--- a/code/style.css
+++ b/code/style.css
@@ -160,13 +160,13 @@ html {
   }
 
   .iheart {
-    color: grey;
+    color: darkgrey;
     font-size: 20px;
     -webkit-animation: colorswap 5s infinite alternate;
   }
 
   @-webkit-keyframes colorswap {
-    from {color: grey;}
+    from {color: darkgrey;}
     to {color: red;}
   }
 
