--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,202 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background-color: #5050b1;
+  color: rgb(236, 222, 222);
+  margin: 0;
+  font-family: Helvetica, sans-serif;
+ 
 }
+
+/* HEADER */
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 22px 10px;
+  background-color: rgb(197, 175, 175);
+  
+}
+
+.logo {
+  /*background-color: indigo;*/
+  height: 70px;
+  margin: 25px 5px 0px 5px;
+}
+
+.titel {
+  font-size: 50px;
+  /*background-color: khaki; */ 
+  margin: 10px;
+
+}
+
+.navigation-hamburger-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(70, 87, 54);
+  width: 100%;
+  height: 50px;
+  
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 30px;
+}
+
+.hamburger div {
+  background-color: #fff200;
+  width: 30px;
+  height: 5px;
+  border-radius: 5px;
+}
+
+.hamburger div:hover {
+  background-color: #a70006;
+}
+
+.navigation-link-container {
+  display: none;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: rgb(72, 95, 48);
+  width: 100%;
+  height: 50px;
+
+}
+
+.links {
+  display: none;
+  margin: 15px;
+
+}
+
+/* MAIN PLANT */
+
+.main-plant-container {
+  padding: 70px 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: lightcoral;
+}
+
+.main-plant-artikle {
+  border: 1px solid lightgreen;
+  padding-bottom: 20px;
+
+}
+
+.main-plant-img {
+  width: 100%;
+}
+
+.main-plant-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.main-plant-text-container h2 {
+  font-size: 30px;
+  font-family: Helvetica, sans-serif;
+  margin: 15px;
+  /*background-color: lawngreen;*/
+}
+
+.main-plant-text-container span {
+  font-style: italic;
+  font-size: 15px;
+}
+
+.main-plant-text-container p {
+  font-size: 10pxpx;
+  font-family: Helvetica, sans-serif;
+  /*background-color: lightcoral;*/
+  margin: 5px 15px;
+  padding: 5px;
+}
+
+
+
+
+
+
+
+/* MEDIA QUERIES */
+
+/* mobile */
+@media (min-width: 768px) {
+
+  .header {
+    height: 300px;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .logo {
+    height: 120px;
+    margin-left: 20px;
+  }
+
+  .titel {
+    font-size: 100px;
+    font-size: 70px;
+  }
+
+  .navigation-hamburger-container {
+    display: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .navigation-link-container {
+    display: flex;
+  }
+
+  .links {
+    display: inline-block;
+
+  }
+
+  .main-plant-container {
+    display: flex;
+    flex-direction: row;
+  
+  }
+
+ 
+
+  .main-plant-img {
+
+
+  }
+
+
+ 
+}
+
+
+
+
+
+
+
+
+/* tablet */
+@media (min-width: 992px) {
+
+}
+
+/* desktop */
+@media (min-width: 1200px) {
+
+}
+
