--- a/code/style.css
+++ b/code/style.css
@@ -5,7 +5,7 @@ body {
   background-image:url(assets/background.png);
   background-size:cover;
   background-position: center;
-  color: #000;
+  color: #000;  
 }
 
 h1{
@@ -14,19 +14,25 @@ h1{
 
 .desktop-box {
 background-color: lightgoldenrodyellow;
-border: 4px black double;
-border-radius: 5%;
+border: 4px black solid;
+border-radius:10px;
 display: flex;
-margin: 70px;
-padding:100px;
-flex-direction: column;
+margin: 70px 100px;
+width: 80%;
+padding: 100px;
+flex-direction:column;
+align-items: center; 
+justify-content: center;
 
 }
 
 
 /* * * * KOM IHÅG ATT PUSH/Commit TO GIT * * * */ 
 
-
+/* Det kan vara värt att lägga in en class="Header"
+i headern. Ifall jag i framtiden vill bygga en till
+header i sidan så behöver jag kunna specifiera vilken jag 
+vill och style by class. Gäller alla såna.   */
 
 
 /* HEADER */
@@ -50,19 +56,31 @@ header h2 {
   display: flex;
 }
 
-header nav {
+.navigation-container {
   display: flex;
   font-size: 24px;  
-  margin-right: 24px;
+  /* margin-right: 24px; */
   background-color: #13141b;
+  color:rgb(9, 85, 32);
 }
 
-header nav a:any-link {
+.navigation-item {
+
+  margin-right: 10px;
+}
+
+.navigation-item:last-child {
+
+  margin-right: 0;
+}
+
+
+/* header nav a:any-link {
   padding:10px;
   margin-right: 60px;
   color:rgb(9, 85, 32);
   
-}
+} */
 
 .img-container-logo {
 overflow:hidden;
@@ -80,53 +98,91 @@ justify-content: center;
   justify-content: space-between;
   text-align: center;  
   border: 2px solid black;
-  align-items: flex-start;
+  align-items: center;
   padding:10px;
   background: whitesmoke;
-
+  flex-direction: column;
 }
 
 
-
-/*.big-news a {
-  border: 2px solid black;
-  display: flex;
-  background: whitesmoke;  
-  flex-flow: column wrap;
-
-}
-
-.big-news a:hover{
-
-  border: 4px solid black;
-
-}/*
+/*Kan jag ta bort big-news-img diven? */
 
 /*SMALL NEWS*/
 .small-news {
   display: flex;
   justify-content: space-around;
-  text-align: center; 
-
+  flex-flow: column;
+  margin: 10px;
   
 }
 
 .small-news a {
   border: 2px solid black;
-  display: flex;
+  display:flex;
   background: whitesmoke;  
-  flex-flow: column wrap;
+  margin:10px;
+  text-align: center;
 
 }
 
 .small-news a:hover{
 
   border: 4px solid black;
+  margin: 8px;
 
 }
 .small-news img{
-width:200px;
-height:200px;
+width:500px;
+height:500px;
 }
 
 /* NEW Grid */
+
+/* Responsive kör nog max när jag inte gör mobile first*/ 
+
+@media (min-width:1025px) {
+  .desktop-box {
+
+    flex-direction: row;    
+    width: 70%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .big-news {
+  flex-direction: row;
+  flex-shrink: 1;       
+  }
+  .big-news-text{
+
+    width:200px;
+  }
+
+  .small-news {
+    flex-direction: row;
+    width: 60%;
+    flex-grow: 1;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    align-items: center;    
+    }
+
+  .small-news img {
+  width: 80%;
+  height: 80%;  
+  }
+
+  .small-news a {
+  flex-direction: row;
+  width: 20%;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  }
+
+  
+}
+
+
+
