corrected some typos in css

--- a/code/style.css
+++ b/code/style.css
@@ -83,7 +83,7 @@ header {
   display: flex;
   flex-wrap: wrap;
   height: 100%;
-  min width: 40px;
+  min-width: 40px;
   flex-basis: 1;
   padding: 10px;
 }
@@ -251,7 +251,7 @@ nav ul li {
 
 .podcasts .text {
   padding: 0 .5rem 0 0;
-  border
+  /* border */
 }
 
 section 
@@ -268,7 +268,7 @@ section
 .story {
   display: flex;
   flex-direction: column-reverse;
-  border: 1px solid pink;
+  /* border: 1px solid pink; */
 }
 
 .story div {
